WIP trying private logger

--- a/nuget.config
+++ b/nuget.config
@@ -3,6 +3,7 @@
 	<packageSources>
 		<clear />
 		<add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+		<add key="telemetry" value="C:\Users\stefa\Desktop\PowerToys telemetry\PowerToys" />
 	</packageSources>
 	<packageSourceMapping>
 		<packageSource key="nuget.org">
